# somnium

./: CMakeLists.txt  Makefile  README.md  rl.sh
include/: core.h
include/remwave/: Camera.h  Renderer.h  Scene.h  Target.h  remwave.h
include/remwave/impl/: Context.h
include/somnium/: Camera.h  Renderer.h  Scene.h  Target.h  somnium.h
include/somnium/impl/: Context.h
src/: Camera.cpp  Context.cpp  Renderer.cpp  Scene.cpp  Target.cpp  core.cpp  python.cpp
test/cases/basic_python/: test.py
test/cases/check/: test.sh
test/code/: test_check.cpp
